<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>FrontPage</class>
 <widget class="QMainWindow" name="FrontPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1138</width>
    <height>592</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <property name="styleSheet">
   <string notr="true"/>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="styleSheet">
       <string notr="true">img url(:/img/images/pamphlet1.jpg)</string>
      </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
      <widget class="QWidget" name="home_1">
       <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>10</y>
          <width>1120</width>
          <height>522</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
          <widget class="QPushButton" name="pushButton">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>275</width>
             <height>520</height>
            </size>
           </property>
           <property name="styleSheet">
            <string notr="true">image: url(:/img/images/screen1.jpg);</string>
           </property>
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="pushButton_2">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>275</width>
             <height>520</height>
            </size>
           </property>
           <property name="styleSheet">
            <string notr="true">image: url(:/img/images/screen2.jpg);</string>
           </property>
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="pushButton_3">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>275</width>
             <height>520</height>
            </size>
           </property>
           <property name="styleSheet">
            <string notr="true">image: url(:/img/images/screen3.jpg);</string>
           </property>
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="pushButton_4">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>275</width>
             <height>520</height>
            </size>
           </property>
           <property name="styleSheet">
            <string notr="true">image: url(:/img/images/screen4.jpg);</string>
           </property>
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
        </layout>
       </widget>
      </widget>
      <widget class="QWidget" name="home_2">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <widget class="QPushButton" name="homeButton_1">
        <property name="geometry">
         <rect>
          <x>970</x>
          <y>70</y>
          <width>93</width>
          <height>28</height>
         </rect>
        </property>
        <property name="text">
         <string>Home</string>
        </property>
       </widget>
       <widget class="QTabWidget" name="tabWidget">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>40</y>
          <width>900</width>
          <height>480</height>
         </rect>
        </property>
        <property name="currentIndex">
         <number>0</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
          <string>Info</string>
         </attribute>
         <widget class="QLabel" name="pamphlet_pic">
          <property name="geometry">
           <rect>
            <x>0</x>
            <y>0</y>
            <width>900</width>
            <height>450</height>
           </rect>
          </property>
          <property name="text">
           <string/>
          </property>
         </widget>
        </widget>
        <widget class="QWidget" name="tab_2">
         <attribute name="title">
          <string>Pricing</string>
         </attribute>
         <widget class="QLabel" name="pricing_label">
          <property name="geometry">
           <rect>
            <x>0</x>
            <y>0</y>
            <width>900</width>
            <height>450</height>
           </rect>
          </property>
          <property name="text">
           <string/>
          </property>
         </widget>
        </widget>
       </widget>
      </widget>
      <widget class="QWidget" name="home_3">
       <widget class="QPushButton" name="homeButton_2">
        <property name="geometry">
         <rect>
          <x>1020</x>
          <y>0</y>
          <width>93</width>
          <height>28</height>
         </rect>
        </property>
        <property name="text">
         <string>Home</string>
        </property>
       </widget>
       <widget class="QLabel" name="contact_label">
        <property name="geometry">
         <rect>
          <x>15</x>
          <y>45</y>
          <width>1001</width>
          <height>481</height>
         </rect>
        </property>
        <property name="text">
         <string/>
        </property>
       </widget>
      </widget>
      <widget class="QWidget" name="home_4">
       <widget class="QPushButton" name="homeButton_3">
        <property name="geometry">
         <rect>
          <x>992</x>
          <y>10</y>
          <width>111</width>
          <height>28</height>
         </rect>
        </property>
        <property name="text">
         <string>Home</string>
        </property>
       </widget>
       <widget class="QLabel" name="customer_label">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
          <width>981</width>
          <height>511</height>
         </rect>
        </property>
        <property name="text">
         <string/>
        </property>
       </widget>
       <widget class="QPushButton" name="reviewButton">
        <property name="geometry">
         <rect>
          <x>992</x>
          <y>40</y>
          <width>111</width>
          <height>28</height>
         </rect>
        </property>
        <property name="text">
         <string>Submit A Review</string>
        </property>
       </widget>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1138</width>
     <height>26</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>reviewButton</sender>
   <signal>clicked()</signal>
   <receiver>FrontPage</receiver>
   <slot>submitReview()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>1030</x>
     <y>83</y>
    </hint>
    <hint type="destinationlabel">
     <x>1129</x>
     <y>271</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>submitReview()</slot>
 </slots>
</ui>
